# lightning-sentinel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Settings.default.toml  docker-compose.yml  spec.yaml
.github/: general.yaml  security-aduit.yaml
src/: channel_handler.rs  client_wrapper.rs  configuration.rs  lib.rs  lightning_client.rs  main.rs  startup.rs  telegram_client.rs  telemetry.rs  tor_proxy.rs
src/channels/: channels.rs  mod.rs
src/clients/: client.rs  client_wrapper.rs  lightning.rs  lightning_client.rs  mod.rs  nostr_client.rs  telegram_client.rs
src/config_wrapper/: config_wrapper.rs  mod.rs
src/domain/: lightning.rs  mod.rs
src/objects/: lightning_objects.rs  mod.rs  telegram_objects.rs
src/pickle_jar/: mod.rs  pickle_jar.rs
src/pickledb_wrapper/: mod.rs  pickledb_wrapper.rs
src/routes/: info.rs  mod.rs
src/tor/: mod.rs
src/tor_proxy/: mod.rs  tor_proxy.rs
tests/bot/: health_check.rs  helpers.rs
