[package]
name = "lightning-sentinel"
version = "0.1.3"
edition = "2021"
authors = ["tee8z <tee8z@protonmail.com>"]
license-file = "LICENSE"
description = "A telegram bot written in rust that will monitor a lighting node over tor. It does this through calling the node's REST API and sending notifications to a telegram private channel with the node administrator"
repository = "https://github.com/tee8z/lightning-sentinel"
keywords = ["telegram", "lightning", "monitoring", "bot"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
anyhow = "1.0"
libtor = "46.6.1+0.4.6.6"
log = "0.4.14"
env_logger = " 0.9.0"
config = "0.11.0"
reqwest = { version = "0.11.7", features = ["socks", "json"] }
tokio = { version = "1.14.0", features = ["full", "time", "sync"] }
tokio-util = "0.6.9"
futures = "0.3.18"
lazy_static = "1.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.72"
pickledb = "0.4.1"
dirs = "4.0.0"
regex = "1.5.4"
notify = { version = "5.0.0-pre.13", features = ["serde"] }

