[package]
name = "lightning-sentinel"
version = "0.1.5"
edition = "2021"
authors = ["tee8z <tee8z@protonmail.com>"]
license-file = "LICENSE"
description = "A nostr bot to monitor a lighting node. It does this through calling the node's REST API and sending an encrypted notification to defined nostr-relays"
repository = "https://github.com/tee8z/lightning-sentinel"
keywords = ["nostr", "lightning", "monitoring", "bot"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
actix-web = "4"
tracing-actix-web = "0.6"
validator = "0.15.0"
anyhow = "1.0"
libtor = "46.6.1+0.4.6.6"
log = "0.4.14"
env_logger = " 0.9.0"
config = "0.11.0"
reqwest = { version = "0.11.7", features = ["socks", "json", "rustls-tls"] }
tokio = { version = "1.14.0", features = ["full", "time", "sync", "rt-multi-thread", "macros"] }
secrecy = { version = "0.8", features = ["serde"] }
tokio-util = "0.6.9"
futures = "0.3.18"
lazy_static = "1.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.72"
pickledb = "0.4.1"
dirs = "4.0.0"
regex = "1.5.4"
notify = { version = "5.0.0-pre.13", features = ["serde"] }


[dev-dependencies]
linkify = "0.8"
once_cell = "1.7.2"
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"
reqwest = { version = "0.11", features = ["json"] }